# llvm-tutor

./: CMakeLists.txt  instrumented.ll  test.c  test.ll  test_program
OpCounter/: CMakeLists.txt  OpCounter.cpp  README.md  Runtime.cpp
